crates/alder-parse/src/snapshots/alder_parse__type___tests__app_one_arg.snap
---
source: crates/alder-parse/src/type_.rs
description: "Array[User]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Named {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: "Array",
                },
            ],
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 7,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 11,
                                    },
                                },
                                value: "User",
                            },
                        ],
                    },
                    args: [],
                },
            },
        ],
    },
}
