crates/alder-parse/src/snapshots/alder_parse__type___tests__error_app_bad_arg.snap
---
source: crates/alder-parse/src/type_.rs
description: "Array[1]"
---
Args(
    Type(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    6,
)
