crates/alder-parse/src/snapshots/alder_parse__type___tests__error_app_empty.snap
---
source: crates/alder-parse/src/type_.rs
description: "Array[]"
---
Args(
    Empty(
        1,
        7,
    ),
    1,
    6,
)
