crates/alder-parse/src/snapshots/alder_parse__type___tests__error_app_unclosed.snap
---
source: crates/alder-parse/src/type_.rs
description: "Array[User"
---
Args(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 6,
            },
            boundary: Position {
                line: 1,
                column: 11,
            },
            unexpected: Position {
                line: 1,
                column: 11,
            },
        },
    ),
    1,
    6,
)
