crates/alder-parse/src/snapshots/alder_parse__type___tests__error_fn_missing_arrow.snap
---
source: crates/alder-parse/src/type_.rs
description: fn(a) b
---
Fn(
    Arrow(
        1,
        7,
    ),
    1,
    1,
)
