crates/alder-parse/src/snapshots/alder_parse__type___tests__error_fn_missing_parens.snap
---
source: crates/alder-parse/src/type_.rs
description: fn -> a
---
Fn(
    Open(
        1,
        4,
    ),
    1,
    1,
)
